--- a/3ch-web/src/index.css
+++ b/3ch-web/src/index.css
@@ -17,6 +17,9 @@ html, body, #root {
   height: 100%;
 }
 
+html, body, #root { height: 100%; }
+body { margin: 0; overflow: hidden; }
+
 a {
   font-weight: 500;
   color: #646cff;
